--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -2,26 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Social Alarm Clock</title>
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jura&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>a minimal MUD client</title>
   </head>
   <body>
-    <script type="module" src="/src/index.ts"></script>
-    <div>Counter: <span id="counter">0</span></div>
-    <button onclick="window.increment()">Increment</button>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="react-root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
