--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/src/index.css" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react-modal/3.14.3/react-modal.min.js"
-      integrity="sha512-MY2jfK3DBnVzdS2V8MXo5lRtr0mNRroUI9hoLVv2/yL3vrJTam3VzASuKQ96fLEpyYIT4a8o7YgtUs5lPjiLVQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <title>a minimal MUD client</title>
   </head>
   <body>
-    <div id="react-root"></div>
+    <div id="react-root" style="height: 100vh"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
