--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/src/index.css" />
-    <title>a minimal MUD client</title>
+    <title>Pledger - Board</title>
   </head>
   <body>
     <div id="react-root" style="height: 100vh"></div>
